--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "uuid": "^10.0.0"
-  }
+  },
+  "name": "finance_project",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
