features added by style in login.ejs

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "uuid": "^10.0.0"
   },
   "name": "finance_project",
+  "type": "module",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
