--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-uMkS8tfUrtCIeUPW
-23052878
-
-mongodb+srv://23052878:uMkS8tfUrtCIeUPW@bank.oxyupmx.mongodb.net/?retryWrites=true&w=majority&appName=bank
+PORT=3222
